UI Fixed To Create Gap between Buttons

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -370,6 +370,6 @@ svg {
     display: grid;
     width: 100%;
     gap: 20px;
-    margin-top: 30px;
+    margin-top: 80px;
 }
 
